feat(security): 添加用户注册功能并配置数据 REST API
- 在 application.properties 中配置数据 REST API基路径和分页参数- 添加 spring-boot-starter-data-rest 依赖
- 新增用户注册相关测试用例
- 创建测试配置类，提供模拟对象和安全配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,8 @@ server.port=8443
 server.ssl.key-store=file:./mykeys.jks
 server.ssl.key-store-password=letmein
 server.ssl.key-password=letmein
+# 配置数据REST API的基路径
+spring.data.rest.base-path=/rest-api
+# 配置分页参数
 taco.orders.page-size=20
+
